styling is broken on github version, trying to fix

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .headerDiv{
     display: flex;
     width: 100%;
-    height: 7%;
+    height: 9%;
     align-content: center;
     justify-content: center;
     background-color: #3d5a80;
