--- a/src/components/HistoryContainer/HistoryContainer.css
+++ b/src/components/HistoryContainer/HistoryContainer.css
@@ -1,5 +1,5 @@
 .historyContainer{
-    height: 92%;
+    height: 90%;
     width: 12%;
     display: flex;
     flex-wrap: wrap;
