--- a/src/components/MainContainer/MainContainer.css
+++ b/src/components/MainContainer/MainContainer.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 81%;
+    width: 87%;
     padding-bottom: 4%;
 }
