--- a/src/components/SearchComponent/SearchComponent.css
+++ b/src/components/SearchComponent/SearchComponent.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     width: 81%;
-    height: 10%;
+    height: 8%;
     align-items: center;
 }
 
